# lab2/backend/soa-products/src/main/kotlin/com/soa/products/controller/PersonController.kt
@@ -1,0 +1,19 @@
+package com.soa.products.controller
+
+import com.soa.products.service.PersonService
+import com.soa.products.transformer.toCreatePersonCommand
+import generated.soa.products.controller.PersonApi
+import generated.soa.products.dto.CreatePersonRequestTo
+import generated.soa.products.dto.CreatePersonResponseTo
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.RestController
+
+@RestController
+class PersonController(
+    private val personService: PersonService,
+) : PersonApi {
+    override fun createPerson(createPersonRequestTo: CreatePersonRequestTo): ResponseEntity<CreatePersonResponseTo> =
+        ResponseEntity.status(HttpStatus.CREATED)
+            .body(CreatePersonResponseTo(personService.create(createPersonRequestTo.toCreatePersonCommand())))
+}
