# lab2/backend/soa-products/src/main/kotlin/com/soa/products/dto/ApiErrorTo.kt
@@ -1,8 +1,0 @@
-package com.soa.products.dto
-
-import java.time.Instant
-
-data class ApiErrorTo(
-    val message: String?,
-    val timestamp: Instant = Instant.now()
-)
