# lab2/contract/products-api/api.yaml
@@ -6,11 +6,37 @@ info:
 
 tags:
   - name: product
+  - name: person
 
 servers:
   - url: /api
 
 paths:
+  /persons:
+    post:
+      operationId: createPerson
+      tags: [ person ]
+      summary: Create a new person
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'schemas.yaml#/components/schemas/CreatePersonRequestTo'
+      responses:
+        201:
+          description: Product created
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/CreatePersonResponseTo'
+        400:
+          description: Invalid request body params
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/ApiErrorTo'
+
   /products:
     get:
       operationId: getProducts
@@ -49,7 +75,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: 'schemas.yaml#/components/schemas/CreateUpdateProductTo'
+              $ref: 'schemas.yaml#/components/schemas/CreateUpdateProductRequestTo'
       responses:
         201:
           description: Product created
@@ -108,7 +134,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: 'schemas.yaml#/components/schemas/CreateUpdateProductTo'
+              $ref: 'schemas.yaml#/components/schemas/CreateUpdateProductRequestTo'
       responses:
         200:
           description: Product updated
@@ -181,9 +207,9 @@ paths:
 
   /products/manufacture-cost/less-than:
     get:
-      operationId: getProductsWithManufactureCostLessThan
+      operationId: getProductsWithmanufacturerCostLessThan
       tags: [ product ]
-      summary: Get products with manufactureCost less than a specified value with pagination
+      summary: Get products with manufacturerCost less than a specified value with pagination
       parameters:
         - $ref: 'parameters.yaml#/components/parameters/CostParameter'
         - $ref: 'parameters.yaml#/components/parameters/PageParameter'
